devscripts (2.10.13) UNRELEASED; urgency=low

  * debcheckout: wrap error message. (Closes: #459372)

 -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Sun, 06 Jan 2008 01:53:44 +0100

devscripts (2.10.12) unstable; urgency=low

  [ Stefano Zacchiroli ]
  * debcheckout: add auth support for *.launchpad.net. Thanks to Colin Watson
    for the patch (Closes: #451672)

  [ Mohammed Adnène Trojette ]
  * debian/control:
     + bump Standards-Version to 3.7.3.
     + build-depend on and suggest libterm-size-perl.
  * debian/dirs: create /etc
  * bts:
     + add a -n/--no-action option printing emails to stdout instead
       of sending them. (Closes: #458603)
     + add a "SEE ALSO" section in manual page. (Closes: #458296)
     + automatically Cc: team@security.debian.org when (un)tagging a bug
       security. (Closes: #458840)
  * chdist: generate a manual page from source.
  * dch:
     + add a --bin-nmu option for binNMUs. (Closes: #458496)
     + add a -s/--security option for Security Team uploads inspired by
       Ubuntu's.
     + add a -l/--local option to allow adding suffixes to a Debian version
       number. (Closes: #284658)
  * debc/debi: don't mess up --debs-dir option's argument when
    debian/svn-deblayout is present. (Closes: #446414)
  * debcheckout: add support for authentication mode with darcs.
    Thanks Luca Capello for the patch. (Closes: #445714)
  * debdiff: make diff output p1-compatible (for native packages or when
    interdiff is not available). Thanks dAniel hAhler for the patch.
    (Closes: #456223)
  * diff2patches: new patch written by Raphael Geissert <atomo64@gmail.com>.
    Extracts patches from a .diff.gz file placing them under debian/ or,
    if present, debian/patches. (Closes: #456626)
  * grep-excuses: permit requests to http://bjorn.haxx.se/debian/
    with --wipnity, -w option. Idea and implementation courtesy from
    Julian Mehnle <julian@mehnle.net>. (Closes: #448279)