@@ -143,8 +143,8 @@ And now, in mostly alphabetical order, the scripts:
   signature and MD5 sums of a dsc file against the most current Debian
   keyring on your system.
 
-- grep-excuses [wget]: grep the update_excuses.html file to find out
-  what is happening to your packages.
+- grep-excuses [libterm-size-perl, wget]: grep the update_excuses.html
+  file to find out what is happening to your packages.
 
 - licensecheck: given a list of source files, attempt to determine which
   license (or combination of licenses) each file is placed under.
