@@ -1,6 +1,14 @@
 devscripts (2.10.13) UNRELEASED; urgency=low
 
+  [ Mohammed Adnène Trojette ]
   * debcheckout: wrap error message. (Closes: #459372)
+
+  [ Adam D. Barratt ]
+  * grep-excuses: Improve the error message when libterm-size-perl isn't
+    installed.
+  * debian/control: Add libterm-size-perl to the description of grep-excuses
+    (Closes: #459586)
+  * README: Add libterm-size-perl to the description of grep-excuses
 
  -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Sun, 06 Jan 2008 01:53:44 +0100
 
